scrollbar fix

--- a/src/main/resources/static/css/partial/sidebar-partial.css
+++ b/src/main/resources/static/css/partial/sidebar-partial.css
@@ -40,6 +40,8 @@
 
 #sidebar-partial{
   overflow: -moz-scrollbars-none;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .side-menu .btn-default {
